[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a-a"
version = "0.1.0"
description = "CLI for a-a.chat forum (forum.a-a.chat) via Discourse User API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "a-a.chat" }]
keywords = ["discourse", "forum", "cli", "a_a_chat", "user-api-key"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
  "typer>=0.12.0",
  "httpx>=0.27.0",
  "cryptography>=42.0.0",
]

[project.scripts]
a-a = "a_a.cli:main"

[project.urls]
Homepage = "https://a-a.chat"
Repository = "https://github.com/yywwrr/pip_a-a"

[tool.setuptools.packages.find]
where = ["src"]
